--- a/admin/templates/admin/admin_landing.html
+++ b/admin/templates/admin/admin_landing.html
@@ -251,7 +251,7 @@
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
                     <span>Application Version</span>
-                    <span class="badge bg-secondary">v1.0.0</span>
+                    <span class="badge bg-secondary">v{{ app_version }}</span>
                 </div>
             </div>
         </div>
